<resources>
    <string name="app_name">todoApplication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="active_tasks">Active Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do">To-do</string>

    <string-array name="Status">
        <item>In-Progress</item>
        <item>Completed</item>
        <item>To Do</item>

    </string-array>

    <string-array name="Priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>

    </string-array>
</resources>