<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFBB86FC"
    android:fitsSystemWindows="true">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:helperText="Required*"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeErrorColor="@color/red"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:maxLines="1"
        app:startIconDrawable="@drawable/email24"
        app:startIconTint="@color/white"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:helperTextTextColor="@color/red"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:maxLines="1"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayoutPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:helperText="Required*"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeErrorColor="@color/red"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:maxLines="1"
        app:startIconDrawable="@drawable/password"
        app:startIconTint="@color/white"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:helperTextTextColor="@color/red"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:maxLines="1"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LoginBtn"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginBottom="40dp"/>
    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/RegisterBtn"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginBottom="40dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>